--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                         </div>
                         <div class="col-5 d-flex right-side justify-content-center align-items-center">
                             <button id="minus-button1" class="btn btn-default"><i class="fas fa-minus"></i></button>
-                            <input id="cart-field1" class="text-field" type="text" value="1">
+                            <input id="phone-count" class="text-field" type="text" value="1">
                             <button id="plus-button1"  class="btn btn-default"><i class="fas fa-plus"></i></button>
-                            <h4>$ <span id="price1">59</span></h4>
+                            <h4>$ <span id="phone-price">1250</span></h4>
                             <img class="rmv" src="images/remove.png" alt="">
 
 
@@ -44,9 +44,9 @@
                         </div>
                         <div class="col-5 d-flex right-side justify-content-center align-items-center">
                             <button id="minus-button2" class="btn btn-default"><i class="fas fa-minus"></i></button>
-                            <input id="cart-field2" class="text-field" type="text" value="1">
+                            <input id="case-count" class="text-field" type="text" value="1">
                             <button id="plus-button2" class="btn btn-default"><i class="fas fa-plus"></i></button>
-                            <h4>$ <span  id="price2">180</span></h4>
+                            <h4>$ <span  id="case-price">59</span></h4>
                             <img class="rmv" src="images/remove.png" alt="">
 
                         </div>
@@ -55,15 +55,15 @@
                 <div class="calculate-section">
                     <div class="row">
                         <div class="col-6">
-                            <h4>Subtotal:</h4>
+                            <h4 id="subTotal">Subtotal:</h4>
                             <h4>Tax:</h4>
-                            <h4>Total:</h4>
+                            <h4 id="total">Total:</h4>
 
                         </div>
                         <div class="col-6 cal-right ">
+                            <h3 id="subTotalPrice">$ <span>0</span> </h3>
                             <h3>$ <span>0</span> </h3>
-                            <h3>$ <span>0</span> </h3>
-                            <h3>$ <span>0</span> </h3>
+                            <h3 id="totalPrice">$ <span>0</span> </h3>
                         </div>
                     </div>
                 </div>
