--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 
                         </div>
                         <div class="col-6 cal-right ">
-                            <h3 id="subTotalPrice">$ <span>0</span> </h3>
-                            <h3>$ <span>0</span> </h3>
-                            <h3 id="totalPrice">$ <span>0</span> </h3>
+                            <h3>$ <span id="subTotalPrice">1309</span> </h3>
+                            <h3>$ <span id="tex">0</span> </h3>
+                            <h3 >$ <span id="GrandtotalPrice">1309</span> </h3>
                         </div>
                     </div>
                 </div>
