--- a/index.html
+++ b/index.html
@@ -61,15 +61,20 @@
 
                         </div>
                         <div class="col-6 cal-right ">
-                            <h3>$ <span id="subTotalPrice">1309</span> </h3>
-                            <h3>$ <span id="tex">0</span> </h3>
-                            <h3 >$ <span id="GrandtotalPrice">1309</span> </h3>
+                            <h4>$ <span id="subTotalPrice">1309</span> </h4>
+                            <h4>$ <span id="tex">0</span> </h4>
+                            <h4>$ <span id="GrandtotalPrice">1309</span> </h4>
                         </div>
                     </div>
                 </div>
+                <div class="d-flex justify-content-end m-5">
+                    <button type="button" class="btn btn-success">Check Out</button>
+                </div>
+                
             </div>
 
         </div>
+        
     </div>
 
 
